--- a/Mk-Docs-Server/Mk-Docs-Server.csproj
+++ b/Mk-Docs-Server/Mk-Docs-Server.csproj
@@ -82,8 +82,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Files\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
