Done but without Updater

--- a/Mk-Docs-Server/App.config
+++ b/Mk-Docs-Server/App.config
@@ -10,11 +10,8 @@
     </startup>
     <userSettings>
         <Mk_Docs_Server.Properties.Settings>
-            <setting name="EditorID" serializeAs="String">
-                <value>atom</value>
-            </setting>
             <setting name="EditorDownloadURL" serializeAs="String">
-                <value>N/A</value>
+                <value />
             </setting>
         </Mk_Docs_Server.Properties.Settings>
     </userSettings>
