final v0.5 with couple of fixes and exclusion of logindata

--- a/Mk-Docs-Server/App.config
+++ b/Mk-Docs-Server/App.config
@@ -10,8 +10,11 @@
     </startup>
     <userSettings>
         <Mk_Docs_Server.Properties.Settings>
+            <setting name="EditorID" serializeAs="String">
+                <value>0</value>
+            </setting>
             <setting name="EditorDownloadURL" serializeAs="String">
-                <value />
+                <value>https://1.1.1.1</value>
             </setting>
         </Mk_Docs_Server.Properties.Settings>
     </userSettings>
